--- a/style.css
+++ b/style.css
@@ -61,7 +61,9 @@ ul li a:hover{
     width: 330px;
     float: left;
     margin-left: 270px;
+    color: #fff ;
 }
+
 .srch{
     font-family: 'Times New Roman';
     width: 200px;
@@ -71,6 +73,7 @@ ul li a:hover{
     margin-top: 13px;
     border-right:none;
     font-size: 16px;
+    color: #fff;
     float: left;
     padding: 10px;
     border-bottom-left-radius: 5px;
@@ -85,7 +88,7 @@ ul li a:hover{
     color: #fff;
     font-size: 15px;
     border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .btn:focus{
@@ -184,4 +187,56 @@ ul li a:hover{
 ::placeholder{
     color: #fff;
     font-family: Arial;
+}
+.btnn{
+    width: 240px;
+    height: 40px;
+    background: #ff7200;
+    border: none;
+    margin-top: 30px;
+    border-radius: 13px;
+    font-size: 18px;
+    cursor: pointer;
+    color: #fff; 
+
+}
+.btnn:hover{
+background: #fff;
+color: #ff7200;
+
+}
+.btnn a{
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+}
+.form .link{
+    font-family:Arial, Helvetica, sans-serif ;
+    font-size: 17px;
+    padding-top: 20px;
+    text-align: center;
+}
+.form .link a{
+    margin-top: 10px;
+    text-decoration: none;
+    color: #ff7200;
+}
+.liw {
+    padding-top: 15px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+.icons a{
+    text-decoration: none;
+    color: #fff;
+}
+.icons ion-icon{
+    color: #fff;
+    font-size: 30px;
+    padding-left: 14px;
+    padding-top: 5px;
+    transition:0.3s ease ;
+}
+.icons ion-icon:hover{
+    color: #ff7200;
 }
